# demo

./: .gitignore  demo.py  pyproject.toml  test_demo.py
.github/workflows/: install.yml  tests.yml
